--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,4 @@
-import styled from 'styled-components';
-
-export const Container = styled.div`
+.container {
   max-width: 1280px;
   margin: 0 auto;
   width: 90%;
@@ -12,4 +10,4 @@ export const Container = styled.div`
   @media (min-width: 993px) {
     width: 80%;
   }
-`;
+}
