--- a/src/components/landing/Intro/intro.scss
+++ b/src/components/landing/Intro/intro.scss
@@ -1,15 +1,12 @@
-import styled from 'styled-components';
-import overlayIllustration from 'assets/illustrations/overlay.svg';
-
-export const Wrapper = styled.div`
+.wrapper {
   padding-bottom: 4rem;
-  background-image: url(${overlayIllustration});
+  background-image: url('assets/illustrations/overlay.svg');
   background-size: contain;
   background-position: right top;
   background-repeat: no-repeat;
-`;
+}
 
-export const IntroWrapper = styled.div`
+.introWrapper {
   padding: 4rem 0;
   display: flex;
   align-items: center;
@@ -18,9 +15,9 @@ export const IntroWrapper = styled.div`
   @media (max-width: 960px) {
     flex-direction: column;
   }
-`;
+}
 
-export const Details = styled.div`
+.details {
   flex: 1;
 
   @media (max-width: 960px) {
@@ -31,10 +28,17 @@ export const Details = styled.div`
   h1 {
     margin-bottom: 2rem;
     font-size: 36pt;
-    color: ${({ theme }) => (theme === 'light' ? '#212121' : '#fff')};
-
-    @media (max-width: 960px) {
-      mix-blend-mode: ${({ theme }) => (theme === 'light' ? 'unset' : 'difference')};
+    &.light {
+      color : '#212121';
+      @media (max-width: 960px) {
+        mix-blend-mode:'unset';
+      }
+    }
+    &.dark {
+      color : '#fff';
+      @media (max-width: 960px) {
+        mix-blend-mode: 'difference';
+      }
     }
 
     @media (max-width: 680px) {
@@ -46,19 +50,27 @@ export const Details = styled.div`
     margin-bottom: 2.5rem;
     font-size: 32pt;
     font-weight: normal;
-    color: ${({ theme }) => (theme === 'light' ? '#707070' : '#e6e6e6')};
 
-    @media (max-width: 960px) {
-      mix-blend-mode: ${({ theme }) => (theme === 'light' ? 'unset' : 'difference')};
+    &.light {
+      color : '#707070';
+      @media (max-width: 960px) {
+        mix-blend-mode:'unset';
+      }
+    }
+    &.dark {
+      color : '#e6e6e6';
+      @media (max-width: 960px) {
+        mix-blend-mode: 'difference';
+      }
     }
 
     @media (max-width: 680px) {
       font-size: 26pt;
     }
   }
-`;
+}
 
-export const Thumbnail = styled.div`
+.thumbnail {
   flex: 1;
 
   @media (max-width: 960px) {
@@ -68,4 +80,4 @@ export const Thumbnail = styled.div`
   img {
     width: 100%;
   }
-`;
+}
