--- a/src/components/theme/Footer/footer.scss
+++ b/src/components/theme/Footer/footer.scss
@@ -1,9 +1,6 @@
-import footerIllustration from 'assets/illustrations/footer.svg';
-import styled from 'styled-components';
-
-export const Wrapper = styled.div`
+.wrapper {
   padding: 28rem 0 4rem 0;
-  background-image: url(${footerIllustration});
+  background-image: url('assets/illustrations/footer.svg');
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
@@ -11,9 +8,9 @@ export const Wrapper = styled.div`
   @media (max-width: 1960px) {
     padding: 14rem 0 4rem;
   }
-`;
+}
 
-export const Flex = styled.div`
+.flex {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
@@ -23,9 +20,9 @@ export const Flex = styled.div`
     text-align: center;
     align-items: center;
   }
-`;
+}
 
-export const Links = styled.div`
+.links {
   display: flex;
   align-items: center;
 
@@ -41,9 +38,9 @@ export const Links = styled.div`
       margin: 0;
     }
   }
-`;
+}
 
-export const Details = styled.div`
+.details {
   h2,
   a,
   span {
@@ -53,4 +50,4 @@ export const Details = styled.div`
   @media (max-width: 680px) {
     margin-bottom: 2rem;
   }
-`;
+}
