--- a/src/components/landing/Skills/skills.scss
+++ b/src/components/landing/Skills/skills.scss
@@ -7,7 +7,7 @@
   background-repeat: no-repeat;
 }
 
-.wkillsWrapper {
+.skillsWrapper {
   padding: 4rem 0;
   display: flex;
   align-items: center;
