--- a/src/components/landing/Intro/intro.scss
+++ b/src/components/landing/Intro/intro.scss
@@ -1,4 +1,4 @@
-.wrapper {
+.wrapperIntro {
   padding-bottom: 4rem;
   background-image: url('assets/illustrations/overlay.svg');
   background-size: contain;
