--- a/src/components/landing/Skills/skills.scss
+++ b/src/components/landing/Skills/skills.scss
@@ -1,6 +1,6 @@
 
 
-.wrapper {
+.wrapperSkills {
   background-image: url('assets/illustrations/details.svg');
   background-size: contain;
   background-position: left top;
