--- a/src/components/landing/Projects/projects.scss
+++ b/src/components/landing/Projects/projects.scss
@@ -1,10 +1,8 @@
-import styled from 'styled-components';
-
-export const Wrapper = styled.div`
+.wrapper {
   padding: 2rem 0;
-`;
+}
 
-export const Grid = styled.div`
+.grid {
   display: grid;
   align-items: center;
   grid-template-columns: repeat(3, 1fr);
@@ -18,29 +16,43 @@ export const Grid = styled.div`
   @media (max-width: 680px) {
     grid-template-columns: 1fr;
   }
-`;
+}
 
-export const Item = styled.div`
+.item {
   width: 100%;
   height: 100%;
   overflow: hidden;
   box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.11);
 
   h4 {
-    color: ${({ theme }) => (theme === 'light' ? '#212121' : '#fff')};
+    &.light {
+      color: '#212121';
+    }
+    &.dark {
+      color: '#fff';
+    }
   }
 
   p {
-    color: ${({ theme }) => (theme === 'light' ? '#707070' : '#c7c7c7')};
+    &.light {
+      color: '#707070';
+    }
+    &.dark {
+      color: '#c7c7c7';
+    }
   }
-`;
+}
 
-export const Content = styled.div`
+a:link {
+  text-decoration: none;
+}
+
+.content {
   padding: 1rem 0;
   min-height: 160px;
-`;
+}
 
-export const Stats = styled.div`
+.stats {
   display: flex;
   align-items: center;
 
@@ -55,17 +67,27 @@ export const Stats = styled.div`
     }
 
     svg path {
-      fill: ${({ theme }) => (theme === 'light' ? '#000' : '#fff')};
+      &.light {
+        fill: '#000';
+      }
+      &.dark {
+        fill: '#fff';
+      }
     }
 
     span {
-      color: ${({ theme }) => (theme === 'light' ? '#000' : '#fff')};
+      &.light {
+        color: '#000';
+      }
+      &.dark {
+        color: '#fff';
+      }
       margin-left: 0.5rem;
     }
   }
-`;
+}
 
-export const Languages = styled.div`
+.languages {
   opacity: 0.5;
   font-size: 14px;
-`;
+}
