--- a/src/components/curriculum/Experience.css
+++ b/src/components/curriculum/Experience.css
@@ -5,7 +5,7 @@
 
 .skillBlock {
   color: blue;
-  margin: 0px 5px 0px 5px;
+  margin: 0 5px 0 5px;
   padding: 2px;
   border: 1px solid blue;
   border-radius: 7px;
