--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,3 +2,13 @@ header {
   background: rebeccapurple;
   margin-bottom: 1.45rem;
 }
+
+h1 {
+  margin: 0;
+}
+
+#headerTitle {
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 1.45rem 1.0875rem;
+}
