--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,14 +1,19 @@
 header {
   background: rebeccapurple;
   margin-bottom: 1.45rem;
-}
 
-h1 {
-  margin: 0;
-}
+  #headerTitle {
+    margin: 0 auto;
+    max-width: 960px;
+    padding: 1.45rem 1.0875rem;
 
-#headerTitle {
-  margin: 0 auto;
-  max-width: 960px;
-  padding: 1.45rem 1.0875rem;
+    h1 {
+      margin: 0;
+
+      a {
+        color: white;
+        text-decoration: none;
+      }
+    }
+  }
 }
