--- a/src/components/curriculum/Experience.css
+++ b/src/components/curriculum/Experience.css
@@ -1,9 +1,9 @@
-.experienceBlock header {
+.experience-block header {
   color: blue;
   font-size: 20px;
 }
 
-.skillBlock {
+.skill-block {
   color: blue;
   margin: 0 5px 0 5px;
   padding: 2px;
