--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,7 @@ header {
   background: rebeccapurple;
   margin-bottom: 1.45rem;
 
-  #headerTitle {
+  #header-title {
     margin: 0 auto;
     max-width: 960px;
     padding: 1.45rem 1.0875rem;
