--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -749,7 +749,7 @@ pre tt::after {
   }
 }
 
-.portfolioBody {
+.portfolio-body {
   margin: 0 auto;
   max-width: 960px;
   padding: 0 1.0875rem 1.45rem;
