--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,19 +1,20 @@
-header {
-  background: rebeccapurple;
+@import "../../styles/colors.scss";
+
+#portfolio-header {
+  background-color: $header-background-color;
   margin-bottom: 1.45rem;
 
   #header-title {
-    margin: 0 auto;
     max-width: 960px;
     padding: 1.45rem 1.0875rem;
 
     h1 {
       margin: 0;
-
-      a {
-        color: white;
-        text-decoration: none;
-      }
     }
+  }
+
+  a {
+    color: $header-text-color;
+    text-decoration: none;
   }
 }
