--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -750,7 +750,6 @@ pre tt::after {
 }
 
 .portfolio-body {
-  margin: 0 auto;
-  max-width: 960px;
+  max-width: 80%;
   padding: 0 1.0875rem 1.45rem;
 }
