--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,4 @@
-@import "../../styles/colors.scss";
+@import "../../styles/colors";
 
 #portfolio-header {
   background-color: $header-background-color;
