--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 /* CSS Custom Properties Definitions */
+
+/* stylelint-disable */
 
 :root {
   --maxWidth-none: 'none';
@@ -336,3 +338,5 @@ a:focus {
     list-style-position: inside;
   }
 }
+a {}
+/* stylelint-enable */
