--- a/src/components/curriculum/Experience.scss
+++ b/src/components/curriculum/Experience.scss
@@ -6,7 +6,7 @@
 
   .skill-block {
     color: blue;
-    margin: 0 5px 0 5px;
+    margin: 0 5px;
     padding: 2px;
     border: 1px solid blue;
     border-radius: 7px;
