--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,3 +1,5 @@
+/* stylelint-disable */
+
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -753,3 +755,5 @@ pre tt::after {
   max-width: 80%;
   padding: 0 1.0875rem 1.45rem;
 }
+
+/* stylelint-enable */
