--- a/src/components/post/Post.scss
+++ b/src/components/post/Post.scss
@@ -7,7 +7,9 @@
   }
 
   h2 {
+    /* stylelint-disable */
     font-size: var(--fontSize-4);
+    /* stylelint-enable */
     color: var(--color-primary);
     margin-bottom: var(--spacing-2);
     margin-top: var(--spacing-0);
