--- a/src/templates/template-blog-post.scss
+++ b/src/templates/template-blog-post.scss
@@ -1,3 +1,15 @@
+.blog-post {
+  .header-container {
+    display: flex;
+    flex-direction: row;
+
+    .share-buttons {
+      display: flex;
+      flex-direction: row;
+    }
+  }
+}
+
 .blog-post-nav {
   ul {
     display: flex;
