--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,9 @@
-@import "../../styles/colors";
+@import '../../styles/colors';
 
 #portfolio-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   background-color: $header-background-color;
   margin-bottom: 1.45rem;
 
@@ -10,6 +13,18 @@
 
     h1 {
       margin: 0;
+    }
+  }
+
+  #url-list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    > :not([hidden]) ~ :not([hidden]) {
+      --tw-space-x-reverse: 0;
+      margin-right: calc(2rem * var(--tw-space-x-reverse));
+      margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
     }
   }
 
