--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -757,8 +757,7 @@ pre tt::after {
   }
 
   #profile-container {
-    margin-left: 2.5rem;
-    align-items: center;
+    margin: 0 auto;
   }
 
   .portfolio-body {
