--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -25,7 +25,7 @@
       margin-left: 2rem;
     }
 
-    @media (max-width: 500px) {
+    @media (width <= 500px) {
       flex-direction: column;
       margin: auto 10px auto 0;
     }
