--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -20,6 +20,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-right: 10px;
 
     > :not([hidden]) ~ :not([hidden]) {
       margin-left: 2rem;
@@ -27,7 +28,7 @@
 
     @media (width <= 500px) {
       flex-direction: column;
-      margin: auto 10px auto 0;
+      margin: auto 10px;
     }
   }
 
