--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -757,15 +757,19 @@ pre tt::after {
     margin-left: calc(2.5rem /* 40px */ * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  @media (max-width: 500) {
+  @media (width <= 600px) {
     flex-direction: column;
+
+    #portfolio-body {
+      margin-top: 20px;
+    }
   }
 
   #profile-container {
     margin: 0 auto;
   }
 
-  .portfolio-body {
+  #portfolio-body {
     width: 80%;
     padding: 0 1.0875rem 1.45rem;
   }
