--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -1,6 +1,6 @@
 #contact-form {
-  border: 1px solid black;
   padding: 10px;
+  width: 55%;
 
   .form-group {
     display: flex;
@@ -10,7 +10,6 @@
   input,
   textarea {
     border: 1px solid black;
-    border-radius: 1%;
   }
 
   button {
@@ -19,5 +18,6 @@
     background-color: lightblue;
     font-size: medium;
     border-radius: 10%;
+    font-weight: bold;
   }
 }
