--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -5,4 +5,10 @@
     margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
   }
+
+  .bio-avatar,
+  #short-presentation {
+    margin: 0 auto;
+    text-align: center;
+  }
 }
