--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -2,22 +2,10 @@
   padding: 10px;
   width: 55%;
 
-  .form-group {
-    display: flex;
-    flex-direction: column;
-  }
+  display: flex;
+  flex-direction: column;
+}
 
-  input,
-  textarea {
-    border: 1px solid black;
-  }
-
-  button {
-    margin-top: 10px;
-    padding: 5px;
-    background-color: lightblue;
-    font-size: medium;
-    border-radius: 10%;
-    font-weight: bold;
-  }
+#submit-button {
+  margin: 0 auto;
 }
