--- a/src/components/cv/jobExperience/JobExperience.scss
+++ b/src/components/cv/jobExperience/JobExperience.scss
@@ -3,6 +3,10 @@
   flex-direction: row;
   border: 2px solid blue;
 
+  a {
+    text-decoration: none;
+  }
+
   .job-title {
     flex-basis: 20%;
     display: flex;
