--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,10 @@
 /* CSS Custom Properties Definitions */
 
+@import '@fontsource/roboto/300.css';
+@import '@fontsource/roboto/400.css';
+@import '@fontsource/roboto/500.css';
+@import '@fontsource/roboto/700.css';
+
 /* stylelint-disable */
 
 :root {
