--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -1,14 +1,21 @@
 #profile-container {
-  > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
+  margin: 0 auto;
+  text-align: center;
 
-    margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+  #bio-avatar {
+    margin: 0 auto;
   }
 
-  .bio-avatar,
-  #short-presentation {
-    margin: 0 auto;
-    text-align: center;
+  #bio {
+    margin-bottom: 1.5em;
+
+    > * {
+      display: flex;
+      justify-content: center;
+
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      }
+    }
   }
 }
