--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -151,7 +151,6 @@ img {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
 }
 
 svg:not(:root) {
@@ -748,24 +747,14 @@ pre tt::after {
 }
 
 #page-container {
-  height: 100%;
-
   #fixed-header {
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
+    position: sticky;
+    top: 0;
   }
 
   #site-container {
     position: absolute;
-    margin-top: 6em;
     display: flex;
-    flex-direction: row;
-
-    > :not([hidden]) ~ :not([hidden]) {
-      --tw-space-x-reverse: 0;
-      margin-right: calc(2.5rem /* 40px */ * var(--tw-space-x-reverse));
-    }
 
     @media (width <= 600px) {
       flex-direction: column;
