--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -1,8 +1,37 @@
 #contact-form {
   padding: 10px;
-  width: 55%;
+  width: 60vw;
   display: flex;
   flex-direction: column;
+
+  #contact-informations {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    > * {
+      width: 25vw;
+    }
+  }
+}
+
+@media (width <= 800px) {
+  #contact-form {
+    width: 100%;
+
+    #contact-informations {
+      display: flex;
+      flex-direction: column;
+
+      > * {
+        width: 100%;
+
+        &:not(:last-child) {
+          margin-bottom: 1em;
+        }
+      }
+    }
+  }
 }
 
 #submit-button {
