--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -1,8 +1,14 @@
+@import '../../styles/colors';
+
 #contact-form {
   padding: 10px;
   width: 60vw;
   display: flex;
   flex-direction: column;
+
+  .contact-field {
+    background-color: $block-background-color;
+  }
 
   #contact-informations {
     display: flex;
