--- a/src/components/cv/experience/Experience.scss
+++ b/src/components/cv/experience/Experience.scss
@@ -3,7 +3,7 @@
 .job {
   display: flex;
   flex-direction: row;
-  border: 2px solid blue;
+  border: 2px solid #1f5099;
 
   a {
     text-decoration: none;
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    background-color: #96c5d4;
 
     .job-name {
       margin: auto;
@@ -22,5 +23,6 @@
 
   .job-details {
     flex-basis: 80%;
+    background-color: #3a6099;
   }
 }
