--- a/src/components/cv/CV.scss
+++ b/src/components/cv/CV.scss
@@ -1,7 +1,7 @@
 .experience-container {
   margin-top: 1em;
-}
 
-#job-list > *:not(:first-child) {
-  margin-top: 20px;
+  > *:not(:first-child) {
+    margin-top: 0.5em;
+  }
 }
