--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -777,7 +777,7 @@ pre tt::after {
 
     #profile-content,
     #portfolio-content {
-      margin: 1em 12% 0 12%;
+      margin: 1em 12% 0;
     }
 
     @media (width <= 600px) {
