--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,13 +3,15 @@
 #portfolio-header {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  background-color: $header-background-color;
-  margin-bottom: 1.45rem;
+
+  > * {
+    width: 100%;
+  }
 
   #header-title {
     max-width: 960px;
     padding: 1.45rem 1.0875rem;
+    margin-left: 15vw;
 
     h1 {
       margin: 0;
@@ -17,24 +19,34 @@
     }
   }
 
+  a {
+    color: $header-text-color;
+    text-decoration: none;
+  }
+
   #url-list {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    margin-right: 10px;
+    justify-content: right;
+    margin-right: 5vw;
 
-    > :not([hidden]) ~ :not([hidden]) {
-      margin-left: 2rem;
+    a {
+      height: 100%;
+      place-content: center;
+      display: inline-grid;
+      margin: auto 0.7em;
+
+      span {
+        place-content: center;
+      }
+
+      &:hover {
+        background-color: white;
+      }
     }
 
     @media (width <= 500px) {
       flex-direction: column;
-      margin: auto 10px;
     }
-  }
-
-  a {
-    color: $header-text-color;
-    text-decoration: none;
   }
 }
