--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -1,6 +1,5 @@
-#profile-container {
-  margin: 0 auto;
-  text-align: center;
+#profile {
+  justify-content: center;
 
   #bio-avatar {
     margin: 0 auto;
@@ -8,6 +7,11 @@
 
   #bio {
     margin-bottom: 1.5em;
+
+    svg {
+      margin-right: 0.2em;
+      width: 20px;
+    }
 
     > * {
       display: flex;
