--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -28,7 +28,12 @@
     display: flex;
     flex-direction: row;
     justify-content: right;
-    margin-right: 5vw;
+
+    margin-right: 5em;
+
+    @media (width <= 600px) {
+      margin: auto;
+    }
 
     a {
       height: 100%;
