--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -108,17 +108,17 @@ h1 {
   margin-bottom: 1.45rem;
   color: inherit;
   font-family:
+    sans-serif,
+    Segoe UI,
     -apple-system,
     BlinkMacSystemFont,
-    Segoe UI,
     Roboto,
     Oxygen,
     Ubuntu,
     Cantarell,
     Fira Sans,
     Droid Sans,
-    Helvetica Neue,
-    sans-serif;
+    Helvetica Neue;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
