--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -1,18 +1,5 @@
-.skill-block {
-  display: flex;
-  flex-direction: row;
-  border: 2px solid #1f5099;
-
-  .skill-title {
-    flex-basis: 20%;
-    border-right: 1px solid #1f5099;
-    background-color: #96c5d4;
-  }
-
-  .skills-list {
-    flex-basis: 80%;
-    background-color: #a8c9d4;
-  }
+.skill-category {
+  margin: auto;
 }
 
 #techno-grid {
@@ -21,7 +8,7 @@
   justify-content: space-around;
   border: 2px solid black;
 
-  @media (width <= 600px) {
+  @media (width <= 700px) {
     flex-direction: column;
   }
 
@@ -33,7 +20,7 @@
   h4 {
     text-align: center;
 
-    @media (width <= 600px) {
+    @media (width <= 700px) {
       text-align: left;
     }
   }
