--- a/src/components/detailBlock/DetailBlock.scss
+++ b/src/components/detailBlock/DetailBlock.scss
@@ -8,7 +8,7 @@
   }
 
   .block-title {
-    flex-basis: 20%;
+    flex-basis: 25%;
     border-right: 1px solid #1f5099;
     background-color: #96c5d4;
     display: flex;
@@ -17,6 +17,7 @@
       display: flex;
       margin: 0.5em;
       text-align: center;
+      width: 100%;
     }
 
     @media (width <= 850px) {
@@ -26,7 +27,7 @@
   }
 
   .detail-info {
-    flex-basis: 80%;
+    flex-basis: 75%;
     background-color: #a8c9d4;
   }
 }
