--- a/src/components/cv/experience/Experience.scss
+++ b/src/components/cv/experience/Experience.scss
@@ -1,39 +1,20 @@
 @import '../../../styles/colors';
 
-.job {
+.job-content {
   display: flex;
-  flex-direction: row;
-  border: 2px solid #1f5099;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 auto;
 
   a {
     text-decoration: none;
   }
+}
 
-  .job-title {
-    background-color: #96c5d4;
-    border-right: 1px solid #1f5099;
-    flex-basis: 20%;
+.job-details-content {
+  margin: 0.5em;
 
-    .job-content {
-      margin: 0.5em;
-      display: flex;
-      height: 97%; // FIXME
-      flex-direction: column;
-      justify-content: space-between;
-      text-align: center;
-    }
-  }
-
-  .job-details {
-    flex-basis: 80%;
-    background-color: #a8c9d4;
-
-    .job-details-content {
-      margin: 0.5em;
-    }
-
-    .job-description {
-      white-space: pre-line;
-    }
+  .job-description {
+    white-space: pre-line;
   }
 }
