--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,40 +1,46 @@
 @import '../../styles/colors';
 
 #portfolio-header {
+  height: 100%;
   display: flex;
   flex-direction: row;
-
-  > * {
-    width: 100%;
-  }
-
-  #header-title {
-    max-width: 960px;
-    padding: 1.45rem 1.0875rem;
-    margin-left: 15vw;
-
-    h1 {
-      margin: 0;
-      font-size: xx-large;
-    }
-  }
 
   a {
     color: $header-text-color;
     text-decoration: none;
   }
 
+  #header-title {
+    flex: 1 0 50%;
+    display: flex;
+
+    h1 {
+      place-self: center;
+      margin: 0 auto;
+      font-size: x-large;
+    }
+  }
+
   #url-list {
+    flex: 1 0 50%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: right;
-    margin-right: 5vw;
+    margin: auto 1em auto -1em;
+
+    > *:not(:last-child) {
+      margin-right: 0.5em;
+    }
+
+    @media (width <= 700px) {
+      margin: auto;
+    }
 
     a {
       height: 100%;
       place-content: center;
       display: inline-grid;
-      margin: auto 0.7em;
 
       span {
         place-content: center;
