--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -1,43 +1,51 @@
-#profile {
-  justify-content: center;
+#social-links {
+  display: flex;
+  flex-direction: column;
 
-  #bio-avatar {
-    margin: 0 auto;
+  > *:not(:last-child) {
+    margin-bottom: 0.5rem;
+  }
+
+  .social-link {
+    display: flex;
+    flex-direction: row;
+
+    img {
+      border-radius: 50%;
+    }
+
+    a {
+      margin-left: 1rem;
+    }
+  }
+}
+
+#profile {
+  display: grid;
+  justify-items: center;
+
+  @media (width <= 700px) {
+    display: flex;
+    flex-direction: row;
   }
 
   #bio {
-    margin-bottom: 1.5em;
+    margin: 1em auto;
+
+    @media (width <= 700px) {
+      margin: auto 2em;
+    }
 
     svg {
-      margin-right: 0.2em;
-      width: 20px;
+      margin-right: 1.5rem;
+      width: 25px;
     }
 
     > * {
       display: flex;
-      justify-content: center;
 
       &:not(:last-child) {
         margin-bottom: 10px;
-      }
-    }
-
-    #social-links {
-      display: flex;
-      flex-direction: row;
-
-      @media (width >= 600px) and (width <= 1250px) {
-        flex-wrap: wrap;
-
-        > * {
-          flex: 1 1 50%;
-        }
-      }
-
-      .social-link {
-        img {
-          border-radius: 50%;
-        }
       }
     }
   }
