--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -1,10 +1,14 @@
+.skill-category {
+  margin: auto;
+}
+
 #techno-grid {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   border: 2px solid black;
 
-  @media (width <= 600px) {
+  @media (width <= 700px) {
     flex-direction: column;
   }
 
@@ -16,7 +20,7 @@
   h4 {
     text-align: center;
 
-    @media (width <= 600px) {
+    @media (width <= 700px) {
       text-align: left;
     }
   }
