--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -3,7 +3,7 @@
 /* stylelint-disable */
 
 $header-height-small: 4.5rem;
-$header-height-large: 7rem;
+$header-height-large: 6rem;
 
 html {
   -ms-text-size-adjust: 100%;
@@ -13,8 +13,6 @@ html {
     serif,
     sans-serif;
   box-sizing: border-box;
-  overflow-y: scroll;
-
   scroll-padding-top: calc($header-height-small + 0.5rem);
 
   @media (width <= 700px) {
@@ -110,17 +108,17 @@ h1 {
   margin-bottom: 1.45rem;
   color: inherit;
   font-family:
+    sans-serif,
+    Segoe UI,
     -apple-system,
     BlinkMacSystemFont,
-    Segoe UI,
     Roboto,
     Oxygen,
     Ubuntu,
     Cantarell,
     Fira Sans,
     Droid Sans,
-    Helvetica Neue,
-    sans-serif;
+    Helvetica Neue;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
@@ -760,6 +758,8 @@ pre tt::after {
 /* stylelint-enable */
 
 #page-container {
+  width: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
 
@@ -768,6 +768,7 @@ pre tt::after {
   }
 
   #fixed-header {
+    flex-grow: 0;
     position: sticky;
     top: 0;
     height: $header-height-small;
@@ -781,7 +782,7 @@ pre tt::after {
 
   #site-container {
     display: flex;
-    flex: 1 1 100%;
+    flex-grow: 1;
 
     #profile-container {
       flex: 0 1 15%;
@@ -796,16 +797,16 @@ pre tt::after {
       background-color: $body-background-color;
     }
 
-    #profile-content,
+    #profile-content {
+      margin: 1em 1.5em;
+    }
+
     #portfolio-content {
+      flex-grow: 1;
       margin: 1em 12% 0;
     }
 
-    #portfolio-content {
-      flex: 1 1 100%;
-    }
-
-    @media (width <= 600px) {
+    @media (width <= 700px) {
       flex-direction: column;
     }
 
