--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -6,6 +6,11 @@
     margin-bottom: 0.5rem;
   }
 
+  @media (width <= 700px) {
+    display: grid;
+    margin-left: 1rem;
+  }
+
   .social-link {
     display: flex;
     flex-direction: row;
@@ -27,6 +32,7 @@
   @media (width <= 700px) {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
   }
 
   #bio {
