--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -788,6 +788,12 @@ pre tt::after {
       flex: 0 1 15%;
       border-right: 1px solid black;
       background-color: $profile-background-color;
+
+      &.blog-view {
+        @media (width <= 700px) {
+          display: none;
+        }
+      }
     }
 
     #portfolio-body {
@@ -798,7 +804,7 @@ pre tt::after {
     }
 
     #profile-content {
-      margin: 1em 1.5em;
+      margin: 1em 0.5em;
     }
 
     #portfolio-content {
