--- a/src/components/detailBlock/DetailBlock.scss
+++ b/src/components/detailBlock/DetailBlock.scss
@@ -19,8 +19,8 @@
       text-align: center;
       width: 100%;
 
-      div {
-        margin: auto;
+      > * {
+        width: 100%;
       }
     }
 
