--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,5 +1,8 @@
 #projects-list {
-  > *:not(:first-child) {
-    margin-top: 2.5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  > * {
+    margin: 1em;
   }
 }
