--- a/src/components/projects/repositories/RepositoryWidget.scss
+++ b/src/components/projects/repositories/RepositoryWidget.scss
@@ -4,8 +4,7 @@
 
     .repository-icons {
       display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
+      flex-flow: row wrap;
     }
   }
 
