--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,7 +1,6 @@
 #projects-list {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   width: 100%;
   gap: 2em;
 
