--- a/src/components/projects/repositories/RepositoryWidget.scss
+++ b/src/components/projects/repositories/RepositoryWidget.scss
@@ -1,4 +1,9 @@
 .repository-widget-container {
+  .repository-widget-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
   .repository-icons-container {
     margin-top: 1em;
 
