--- a/src/components/detailBlock/DetailBlock.scss
+++ b/src/components/detailBlock/DetailBlock.scss
@@ -7,6 +7,15 @@
     flex-direction: column;
   }
 
+  .detail-info {
+    flex-basis: 75%;
+    background-color: #a8c9d4;
+
+    > * {
+      margin: 0 0.2rem;
+    }
+  }
+
   .block-title {
     flex-basis: 25%;
     border-right: 1px solid #1f5099;
@@ -18,16 +27,15 @@
       margin: 0.5em;
       text-align: center;
       width: 100%;
+
+      > * {
+        width: 100%;
+      }
     }
 
     @media (width <= 850px) {
       border-bottom: 1px solid #1f5099;
       border-right: none;
     }
-  }
-
-  .detail-info {
-    flex-basis: 75%;
-    background-color: #a8c9d4;
   }
 }
