--- a/src/components/projects/repositories/RepositoryWidget.scss
+++ b/src/components/projects/repositories/RepositoryWidget.scss
@@ -1,7 +1,17 @@
 .repository-widget-container {
-  .repository-icons-container {
+  .repository-widget-title {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .repository-icons-container {
+    margin-top: 1em;
+
+    .repository-icons {
+      display: flex;
+      flex-flow: row wrap;
+    }
   }
 
   .languages-container {
