--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -1,57 +1,76 @@
-#social-links {
+#profile {
   display: flex;
   flex-direction: column;
-
-  > *:not(:last-child) {
-    margin-bottom: 0.5rem;
-  }
+  gap: 1em;
 
   @media (width <= 700px) {
-    display: grid;
-    margin-left: 1rem;
+    gap: 0.5em;
   }
 
-  .social-link {
-    display: flex;
-    flex-direction: row;
-
-    img {
-      border-radius: 50%;
-    }
-
-    a {
-      margin-left: 1rem;
-    }
-  }
-}
-
-#profile {
-  display: grid;
-  justify-items: center;
-
-  @media (width <= 700px) {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+  #bio-avatar {
+    margin: 0 auto;
   }
 
   #bio {
-    margin: 1em auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5em;
 
     @media (width <= 700px) {
-      margin: auto 2em;
+      flex-direction: row;
+      margin: auto 1em;
+
+      #work {
+        flex: 1 0 65%;
+      }
+
+      #location {
+        flex: 0 1 35%;
+      }
     }
 
     svg {
-      margin-right: 1.5rem;
+      margin-right: 1rem;
       width: 25px;
     }
 
     > * {
       display: flex;
+      flex-direction: row;
+    }
+  }
 
-      &:not(:last-child) {
-        margin-bottom: 10px;
+  #social-links {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+
+    @media (width <= 700px) {
+      flex-direction: row;
+      margin-left: 1rem;
+      justify-content: center;
+      gap: 1em;
+
+      .social-link > a {
+        display: none;
+      }
+    }
+
+    .social-link {
+      display: flex;
+      flex-direction: row;
+
+      div {
+        height: 35;
+        width: 35px;
+      }
+
+      img {
+        border-radius: 50%;
+      }
+
+      a {
+        margin-left: 1rem;
       }
     }
   }
