--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -25,8 +25,7 @@
     flex: 1 1 50%;
     justify-content: right;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     margin: auto 2em auto 0;
     gap: 0.5em;
 
